--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -67,6 +67,7 @@
         @include for-phone {
             grid-column: unset;
             grid-row: unset;
+            height: 80px;
         }
 
 
